--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+kcp2k_rust = { path = "./src/Transports/KCP/kcp2k-rust" }
+tokio = "1.40.0"
+bytes = "1.7.1"
+log = "0.4.22"
