--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ kcp2k_rust = { path = "./src/Transports/KCP/kcp2k-rust" }
 tokio = "1.40.0"
 bytes = "1.7.1"
 log = "0.4.22"
+lazy_static = "1.5.0"
+byteorder = "1.5.0"
+bytemuck = "1.18.0"
