--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-kcp2k_rust = { path = "./src/Transports/KCP/kcp2k-rust" }
-tokio = "1.40.0"
+kcp2k_rust = { path = "src/transports/KCP/kcp2k-rust" }
+tokio = { version = "1.10.0", features = ["full"] }
 bytes = "1.7.1"
 log = "0.4.22"
 lazy_static = "1.5.0"
 byteorder = "1.5.0"
 bytemuck = "1.18.0"
+serde = { version = "1.0.210", features = ["derive"] }
+nalgebra = "0.33.0"
