--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0.210", features = ["derive"] }
 nalgebra = "0.33.0"
 encoding_rs = "0.8.34"
 hex = "0.4.3"
+dashmap = "6.1.0"
