--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 kcp2k_rust = { path = "src/transports/kcp/kcp2k-rust" }
 tokio = { version = "1.10.0", features = ["full"] }
 bytes = "1.7.1"
-log = "0.4.22"
 lazy_static = "1.5.0"
 byteorder = "1.5.0"
 bytemuck = "1.18.0"
@@ -16,3 +15,4 @@ nalgebra = "0.33.0"
 encoding_rs = "0.8.34"
 hex = "0.4.3"
 dashmap = "6.1.0"
+tklog = "0.2.1"
