--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,8 @@ encoding_rs = "0.8.34"
 hex = "0.4.3"
 dashmap = "6.1.0"
 tklog = "0.2.1"
-rust_multistack = "0.28.0"
+rust_multistack = "0.29.0"
+serde_json = "1.0"
+
+[build]
+rustflags = ["-A", "warnings"]
