--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ dashmap = "6.1.0"
 tklog = "0.2.1"
 rust_multistack = "0.29.0"
 serde_json = "1.0"
+atomic = "0.6"
+lazy_static = "1.5.0"
 
 [build]
 rustflags = ["-A", "warnings"]
