--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rust_multistack = "0.29.0"
 serde_json = "1.0"
 atomic = "0.6"
 lazy_static = "1.5.0"
+crossbeam-channel = "0.5.13"
 
 [build]
 rustflags = ["-A", "warnings"]
