--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 atomic = "0.6"
 lazy_static = "1.5.0"
 crossbeam-channel = "0.5.13"
+log = "0.4.22"
 
 [build]
 rustflags = ["-A", "warnings"]
