Implement get_asset_id_by_scene_name function in backend_data Add rand 0.9.0-alpha.2 dependency Implement get_asset_id_by_scene_name function in backend_data Simplify NetworkConnection constructor Remove unused fields from NetworkConnection Implement GameObject and Transform structs Implement on_server_add_player_internal function Implement get_start_position and on_server_add_player functions Implement add_player_for_connection function in NetworkServer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ lazy_static = "1.5.0"
 crossbeam-channel = "0.5.13"
 rust_decimal = "1.36.0"
 half = "2.4.1"
+rand = "0.9.0-alpha.2"
 
 [profile.dev]
 opt-level = 0      # 优化级别
