refactor(network): update snapshot interpolation with ordered float

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ crossbeam-channel = "0.5.13"
 rust_decimal = "1.36.0"
 half = "2.4.1"
 rand = "0.9.0-alpha.2"
+ordered-float = "4.5.0"
 
 [profile.dev]
 opt-level = 0      # 优化级别
