--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,17 @@ edition = "2021"
 
 [dependencies]
 kcp2k_rust = { path = "src/mirror/transports/kcp2k/kcp2k-rust" }
-serde = { version = "1.0.214", features = ["derive"] }
+serde = { version = "1.0.215", features = ["derive"] }
 nalgebra = "0.33.2"
 dashmap = "6.1.0"
 tklog = "0.2.4"
-serde_json = "1.0.132"
+serde_json = "1.0.133"
 atomic = "0.6"
 lazy_static = "1.5.0"
 crossbeam-channel = "0.5.13"
 rust_decimal = "1.36.0"
 half = "2.4.1"
-rand = "0.9.0-alpha.2"
+rand = "0.9.0-beta.0"
 ordered-float = "4.5.0"
 
 [profile.dev]
