--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 kcp2k_rust = { path = "src/mirror/transports/kcp2k/kcp2k-rust" }
+bytes = "1.8.0"
 serde = { version = "1.0.215", features = ["derive"] }
 nalgebra = "0.33.2"
 dashmap = "6.1.0"
