Fix: Improve NetworkIdentity destruction and cleanup
Improved the `NetworkServer`'s `destroy` and `un_spawn` methods to
handle object removal more robustly.  Added logging for better
debugging and fixed potential race conditions.  The changes ensure
that network identities are properly cleaned up even when the
server is not active.  Also added the `log` crate for enhanced
logging capabilities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rust_decimal = "1.36.0"
 half = "2.4.1"
 rand = "0.9.0-beta.0"
 ordered-float = "4.5.0"
+log = "0.4.22"
 
 [profile.dev]
 opt-level = 0      # 优化级别
