feat(backend): 使用配置文件并添加热更新功能
将后端数据存储在配置文件中，并添加了对配置文件的热更新功能，以便在运行时修改配置而不需重启应用。  这提高了开发效率和灵活性。  同时，简化了 `NetworkManager` 的代码，并对一些类型进行了调整。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ half = "2.4.1"
 rand = "0.9.0-beta.0"
 ordered-float = "4.5.0"
 signal-hook = "0.3.17"
+config = "0.13.4"
+notify = "7.0.0"
 
 [profile.dev]
 opt-level = 0      # 优化级别
