--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ signal-hook = "0.3.17"
 # 0.13.4 之后的版本会导致 serde_json 无法正确解析
 config = "0.13.4"
 notify = "7.0.0"
+serde_json = "1.0.133"
 
 [profile.dev]
 opt-level = 0      # 优化级别
