feat(mirror): Add serde_repr crate and improve BackendData handling
引入serde_repr crate用于BackendData中的枚举类型序列化和反序列化，并改进BackendData的读取和处理逻辑，增强程序的健壮性，避免潜在的panic。  同时修复了BackendData的类型定义问题。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ signal-hook = "0.3.17"
 config = "0.13.4"
 notify = "7.0.0"
 serde_json = "1.0.133"
+serde_repr = "0.1.19"
 
 [profile.dev]
 opt-level = 0      # 优化级别
