--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-kcp2k_rust = { path = "src/mirror/transports/kcp2k/kcp2k-rust" }
+kcp2k_rust = { git = "https://github.com/xtjsk/kcp2k-rust.git" }
 bytes = "1.8.0"
 serde = { version = "1.0.215", features = ["derive"] }
 nalgebra = "0.33.2"
