--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,11 @@ rust_decimal = "1.36.0"
 half = "2.4.1"
 rand = "0.9.0-beta.1"
 ordered-float = "4.5.0"
-signal-hook = "0.3.17"
 # 0.13.4 之后的版本会导致 serde_json 无法正确解析
 config = "0.13.4"
 notify = "7.0.0"
 serde_json = "1.0.133"
 serde_repr = "0.1.19"
 
-[profile.dev]
-opt-level = 0      # 优化级别
-debug = false       # 开启调试信息
-overflow-checks = true
+[dev-dependencies]
+signal-hook = "0.3.17"
