--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ rand = "0.9.0-beta.1"
 ordered-float = "4.5.0"
 serde_json = "1.0.133"
 serde_repr = "0.1.19"
+uuid = { version = "1.11.0", features = ["v4"] }
+once_cell = "1.20.2"
